Create button and give it a function

--- a/style.css
+++ b/style.css
@@ -14,3 +14,14 @@ h1 {
 #message-el {
     font-style: italic;
 }
+
+button {
+    background: goldenrod;
+    width: 150px;
+    color: #016f32;
+    font-weight: bold;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: none;
+    border-radius: 2px;
+}
