--- a/style.css
+++ b/style.css
@@ -46,3 +46,9 @@ button:hover {
     color: #ffffff;
 }
 
+.box {
+    width: 50px;
+    height: 50px;
+    background-color: #fdd;
+    transform-origin: left top;
+  }
